Fix mobile button text not centered issue.

--- a/styles/main.css
+++ b/styles/main.css
@@ -68,6 +68,7 @@ body{
     color: #ff7b63;
     font-size: 20px;
     font-weight: bold;
+    text-align:center;
     /* text-shadow:0px 1px 2px #fd00fe; */
     box-shadow: 0px 0px 5px #00ffd1;
     touch-action: manipulation;
